aug-07/active-sup/ThompsonSampling_1000.stderr
Using backend: pytorch
Traceback (most recent call last):
  File "scripts/active/belief_active_plot.py", line 14, in <module>
    import pinot
  File "/home/nguyenm5/coding/pinot/pinot/__init__.py", line 9, in <module>
    import pinot.app
  File "/home/nguyenm5/coding/pinot/pinot/app/__init__.py", line 2, in <module>
    import pinot.app.experiment
  File "/home/nguyenm5/coding/pinot/pinot/app/experiment.py", line 92
    self.optimizer.zero_grad()
                             ^
IndentationError: unindent does not match any outer indentation level
Using backend: pytorch
